--- a/assets/templates/partials/results.tmpl
+++ b/assets/templates/partials/results.tmpl
@@ -3,7 +3,7 @@
 {{ $itemsPerPage := .Data.Pagination.Limit }}
 {{ $totalSearchPosition := multiply (subtract $currentPage 1) $itemsPerPage }}
 {{ $response := .Data.Response }}
-<div id="results" class="search__results">
+<div id="results">
     <h2>
         {{ if ne .Data.Response.Count 0 }}
             <ul class="list--neutral flush">
