--- a/assets/templates/partials/filter.tmpl
+++ b/assets/templates/partials/filter.tmpl
@@ -60,9 +60,11 @@
                     </div>
                 {{ end }}
             </fieldset>
-            <button type="submit"
-                    class="btn btn--primary btn--thick margin-top-sm--2 margin-top-md--2 js-submit-button">Filter
-            </button>
+            <noscript>
+                <button type="submit"
+                        class="btn btn--primary btn--thick margin-top-sm--2 margin-top-md--2 js-submit-button">Filter
+                </button>
+            </noscript>
         </div>
     </div>
     <div class="tiles__item tiles__item--nav-type flush-col hide--sm print--hide">
